--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,18 @@ body {
   height: 20px;
 }
 
+.pokegrid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+  grid-gap: 15px;
+  padding: 25px;
+}
+
+.pokeImage {
+  width: 40px;
+  height: 30px;
+}
+
 .type {
   width: 35px;
   height: 50px;
