Change base application UI

--- a/public/style.css
+++ b/public/style.css
@@ -13,14 +13,23 @@ body {
 
 .pokegrid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
-  grid-gap: 15px;
-  padding: 25px;
+  grid-template-columns: repeat(auto-fit, 40px);
+  grid-gap: 14px;
+  padding: 1rem;
+}
+
+.pokeMini {
+  height: 40px;
+  transition: 200ms box-shadow cubic-bezier(0.4, 0.0, 0.2, 1);
 }
 
 .pokeImage {
   width: 40px;
   height: 30px;
+}
+
+.pokeView {
+  left: calc(50% - 8rem);
 }
 
 .type {
@@ -122,4 +131,48 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.ball-beat {
+  animation-fill-mode: both;
+  animation: fade 200ms 0s cubic-bezier(0.4, 0.0, 0.2, 1);
+}
+
+.ball-beat > div {
+  background-color: #22292F;
+  width: 3px;
+  height: 3px;
+  border-radius: 100%;
+  margin: 2px;
+  animation-fill-mode: both;
+  display: inline-block;
+  animation: ball-beat 0.7s 0s infinite linear;
+}
+
+.ball-beat > div:nth-child(2n-1) {
+  animation-delay: -0.35s;
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+    transform: translateY(-5px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes ball-beat {
+  50% {
+    opacity: 0.2;
+    transform: scale(0.75);
+  }
+
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
